<resources>
    <string name="app_name">Coin tracker</string>
    <string name="price_label">Price</string>
    <string name="_1h_label">1h %</string>
    <string name="_24h_label">24h %</string>
    <string name="market_cap_label">Market Cap</string>
    <string name="volume_label">Volume 24h</string>
    <string name="coin_symbol">Coin symbol</string>
    <string name="_24h_high">24h high</string>
    <string name="_24h_low">24h low</string>
    <string name="circulating_supply">Circulating supply</string>
    <string name="max_supply">Max supply</string>
    <string name="all_time_high">All time high</string>
    <string name="date">%d.%d.%d</string>
    <string name="market_cap">Market Cap</string>
    <string name="_24h_change">24h change</string>
    <string name="top_100">Top 100</string>
    <string name="top_200">Top 200</string>
    <string name="top_300">Top 300</string>
    <string name="top_400">Top 400</string>
    <string name="top_500">Top 500</string>
    <string name="sorting">Sorting</string>
    <string name="filter">Filter</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_failed_toast_message">"Refresh failed.Check your internet connection"</string>
    <string name="search_hint">Bitcoin</string>
    <string name="search">Search</string>
    <string name="_7d_label">7d %</string>
    <string name="search_image_description">Search button</string>
    <string name="last_updated">Last updated</string>
    <string name="find_out_more">Find out more</string>
    <string name="no_coins_found">No coins found :(</string>
    <string name="can_t_load_coins_please_check_your_internet_connection">Can\'t load coins. Please check your internet connection.</string>
</resources>