<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.lukasz.cointracker.detail.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".detail.DetailFragment">

        <ImageView
            android:id="@+id/icon_image_detail"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/coin_symbol"
            app:imageUrl="@{viewModel.selectedCoin.image}"
            app:layout_constraintBottom_toBottomOf="@+id/name_text_view"
            app:layout_constraintEnd_toStartOf="@+id/name_text_view"
            tools:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:coinName="@{String.valueOf(viewModel.selectedCoin.id)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/symbol_text_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/icon_image_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Bitcoin" />

        <TextView
            android:id="@+id/symbol_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(viewModel.selectedCoin.symbol)}"
            android:textAllCaps="true"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/name_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/name_text_view"
            tools:text="BTC" />

        <View
            android:id="@+id/line_separator_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/name_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/label_price_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/price_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/price_textview"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_separator_view" />


        <TextView
            android:id="@+id/price_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/label_price_text_view"
            app:layout_constraintTop_toBottomOf="@+id/line_separator_view"
            app:price="@{viewModel.selectedCoin.current_price}"
            tools:text="$55123.05" />

        <TextView
            android:id="@+id/label_1h_change__textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/_1h_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/change_1h_textview"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_price_text_view" />

        <TextView
            android:id="@+id/change_1h_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/label_1h_change__textview"
            app:layout_constraintTop_toBottomOf="@+id/price_textview"
            app:percentage_change="@{viewModel.selectedCoin.price_change_percentage_1h_in_currency}"
            tools:text="5.05%" />

        <TextView
            android:id="@+id/label_24h_change__textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/_24h_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/change_24h_textview"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_1h_change__textview" />

        <TextView
            android:id="@+id/change_24h_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/label_24h_change__textview"
            app:layout_constraintTop_toBottomOf="@+id/change_1h_textview"
            app:percentage_change="@{viewModel.selectedCoin.price_change_percentage_24h_in_currency}"
            tools:text="12.15%" />

        <TextView
            android:id="@+id/label_market_cap_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/market_cap_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/market_cap_textview"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_24h_change__textview" />

        <TextView
            android:id="@+id/market_cap_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:billions="@{viewModel.selectedCoin.market_cap}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/label_market_cap_textview"
            app:layout_constraintTop_toBottomOf="@+id/change_24h_textview"
            tools:text="$1'123'456'789" />

        <TextView
            android:id="@+id/label_volume_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/volume_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/volume_text_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_market_cap_textview" />

        <TextView
            android:id="@+id/volume_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:billions="@{viewModel.selectedCoin.total_volume}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/label_volume_textview"
            app:layout_constraintTop_toBottomOf="@+id/market_cap_textview"
            tools:text="$80'000'000" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>